[workspace]
resolver = "2"

members = [
    "contracts/ul-nft-core",
    "contracts/marketplace",
    "contracts/liquidity-wrapper",
    "contracts/metadata-manager"
]

[workspace.dependencies]
cosmwasm-std = { version = "2.1.4", default-features = false }
cosmwasm-schema = "2.1.4"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
cw721 = "0.18.0"
cw721-base = { version = "0.18.0", features = ["library"] }
schemars = "0.8.11"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror = "2.0.3"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false