[workspace]
resolver = "2"

members = [
    "contracts/ul-nft-core",
    "contracts/marketplace",
    "contracts/liquidity-wrapper",
    "contracts/metadata-manager",
]

[workspace.dependencies]
cosmwasm-std = { version = "1.5.8", default-features = false, features = ["staking"] }
cosmwasm-schema = "1.5.8"
cw-multi-test = "1.0.0" # Compatible with cosmwasm-std v1.5.8
cw-storage-plus = "1.0.0" # Compatible with cosmwasm-std v1.5.8
cw2 = "1.0.0" # Compatible with cosmwasm-std v1.5.8
cw721 = "0.16.0" # Compatible with cosmwasm-std v1.5.8
cw721-base = { version = "0.16.0", features = ["library"] }

# Utility dependencies
schemars = "0.8.11"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror = "1.0.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true