[package]
name = "liquidity-wrapper"
version = "0.1.0"
edition = "2021"
description = "Euclid Protocol integration for UL-NFTs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.1.0", features = ["staking"] }
cw-storage-plus = "0.15.1"
cw2 = "0.15.1"
schemars = "0.8.11"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
ul-nft-core = { path = "../ul-nft-core" }

[dev-dependencies]
cosmwasm-schema = "1.1.0"
cw-multi-test = "0.15.1"