[package]
name = "liquidity-wrapper"
version = "0.1.0"
authors = ["Mrigesh Thakur", "Utkarsh Maurya"]
edition = "2021"
description = "Liquidity Wrapper Contract for Euclid Protocol Integration"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []

[dependencies]
cosmwasm-std = { version = "2.1.4", features = ["staking"] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
cw721 = "0.18.0"
serde_json = "1.0.0"
schemars = "0.8.11"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = "2.0.3"
ul-nft-core = { path = "../ul-nft-core" }

[dev-dependencies]
cosmwasm-schema = "2.1.4"
cw-multi-test = "2.2.0"