[package]
name = "liquidity-wrapper"
version = "0.1.0"
authors = ["Mrigesh Thakur", "Utkarsh Maurya"]
edition = "2021"
description = "Liquidity Wrapper Contract for Euclid Protocol Integration"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw721 = { workspace = true }
serde_json = "1.0.0"
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
ul-nft-core = { path = "../ul-nft-core" ,default-features = false }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
cw-multi-test = { workspace = true }
