[package]
name = "marketplace"
version = "0.1.0"
edition = "2021"
description = "Marketplace contract for UL-NFTs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { version = "2.1.4", features = ["staking"] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.11"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
cw721 = "0.18.0"
thiserror = "2.0.3"
ul-nft-core = { path = "../ul-nft-core" }

[dev-dependencies]
cosmwasm-schema = "2.1.4"
cw-multi-test = "2.2.0"