[package]
name = "marketplace"
version = "0.1.0"
authors = ["Mrigesh Thakur", "Utkarsh Maurya"]
edition = "2021"
description = "Marketplace Contract for UL-NFTs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
default = []

[dependencies]
cosmwasm-std = { version = "2.1.4", features = ["staking"] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
thiserror = "2.0.3"
schemars = "0.8.11"
cw721 = "0.18.0"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
ul-nft-core = { path = "../ul-nft-core" }

[dev-dependencies]
cosmwasm-schema = "2.1.4"
cw-multi-test = "2.2.0"