[package]
name = "marketplace"
version = "0.1.0"
authors = ["Mrigesh Thakur", "Utkarsh Maurya"]
edition = "2021"
description = "Marketplace Contract for UL-NFTs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []


[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
cw721 = { workspace = true }
serde = { workspace = true }
ul-nft-core = { path = "../ul-nft-core", default-features = false }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
cw-multi-test = { workspace = true }
