[package]
name = "ul-nft-core"
version = "0.1.0"
authors = ["Mrigesh Thakur","Utkarsh Maurya"]
edition = "2021"
description = "Unified Liquidity NFT Core Contract - Tokenized representation of Euclid Protocol liquidity positions"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.1.0", features = ["staking"] }
cw-storage-plus = "0.15.1"
cw2 = "0.15.1"
cw721 = "0.15.1"
cw721-base = { version = "0.15.1", features = ["library"] }
schemars = "0.8.11"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = "1.0.31"

[dev-dependencies]
cosmwasm-schema = "1.1.0"
cw-multi-test = "0.15.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true