[package]
name = "ul-nft-core"
version = "0.1.0"
authors = ["Mrigesh Thakur","Utkarsh Maurya"]
edition = "2021"
description = "Unified Liquidity NFT Core Contract - Tokenized representation of Euclid Protocol liquidity positions"

[lib]
crate-type = ["cdylib", "rlib"]
  
[features]
default = []
library = []

[dependencies]
cosmwasm-std = "2.1.4"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
cw721 = "0.18.0"
cw721-base = { version = "0.18.0", features = ["library"] }
schemars = "0.8.11"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = "2.0.3"

[dev-dependencies]
cosmwasm-schema = "2.1.4"
cw-multi-test = "2.2.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
