[package]
name = "ul-nft-core"
version = "0.1.0"
authors = ["Mrigesh Thakur", "Utkarsh Maurya"]
edition = "2021"
description = "Unified Liquidity NFT Core Contract - Tokenized representation of Euclid Protocol liquidity positions"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw721 = { workspace = true }
cw721-base = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
cw-multi-test = { workspace = true }
